--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -1,5 +1,3 @@
-  /* hero banner */
-  
   .heroSec {
     height: 20em;
     width: 100% !important ;
@@ -7,7 +5,7 @@
   }
 
   .heroBanner {
-    background-image:linear-gradient(rgba(139, 130, 130, 0.5), rgba(187, 80, 80, 0.5)), url("../image/6.card.png");
+    background-image: url("../image/6.card.png");
     background-size: cover;
     background-position: center;
     width: 100% !important;
